suppression des anciens employés | changement tarif remise en forme | suppression du mode de paiement cheque cadeau

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 								</thead>
 									<tr>
 										<th>Mode de paiement</th>
-										<td>Chèque vacance<br />Chèque<br />Espèce</td>
+										<td>Chèque<br />Espèce</td>
 										<td colspan="4" class="txt-right"><span class="glyphicon glyphicon-plus"></span> <a href="#">Afficher les tarifs préférentiels</a></td>
 									</tr>
 								</tfoot>
@@ -250,7 +250,7 @@
 								<tfoot>
 									<tr>
 										<th>Mode de paiement</th>
-										<td>Chèque vacance<br />Chèque<br />Espèce</td>
+										<td>Chèque<br />Espèce</td>
 										<td colspan="4" class="txt-right"><span class="glyphicon glyphicon-plus"></span> <a href="#">Afficher les tarifs préférentiels</a></td>
 									</tr>
 								</tfoot>
@@ -449,7 +449,7 @@
 						<h4 class="well well-small">Tarif séance</h4>
 						<div>
 							<p class="text-center" style="font-size: 5em; line-height: 2em;">
-								6 €
+								7 €
 							</p>
 						</div>
 					</article>
@@ -506,6 +506,7 @@
 				</header>
 				<article>
                     <ul class="row thumbnails list-unstyled">
+                        <!-- équipe 2014
                         <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                             <div class="thumbnail">
                                 <img src="img/agathe.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
@@ -515,6 +516,7 @@
                                 </div>
                             </div>
                         </li>
+                        -->
                         <!-- équipe 2013
                         <li class="span3">
                             <div class="thumbnail">
@@ -549,7 +551,7 @@
                                 <img src="img/aminata.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
                                 <div class="caption">
                                     <h3>Aminata</h3>
-                                    <p>Forte d’un passé de haut niveau en patinage artistique, Aminata a passé ses diplômes pour pouvoir travailler auprès des enfants. Elle est animatrice au mois d’Aout.</p>
+                                    <p>Forte d’un passé de haut niveau en patinage artistique, Aminata a passé ses diplômes pour pouvoir travailler auprès des enfants. Elle est animatrice.</p>
                                 </div>
                             </div>
                         </li>
@@ -558,10 +560,11 @@
                                 <img src="img/raphaelle.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
                                 <div class="caption">
                                     <h3>Raphaëlle</h3>
-                                    <p>Etudiante en 4e année de droit. Raphaëlle assure l'accueil et les renseignements tout au long de la saison.</p>
+                                    <p>Etudiante en 4e année de droit. Raphaëlle assure l'accueil et les renseignements sur le club.</p>
                                 </div>
                             </div>
                         </li>
+                        <!-- équipe 2014
                         <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                             <div class="thumbnail">
                                 <img src="img/virginie.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
@@ -571,6 +574,7 @@
                                 </div>
                             </div>
                         </li>
+                        -->
                         <li class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                             <div class="thumbnail">
                                 <img src="img/julien.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
@@ -585,7 +589,10 @@
                                 <img src="img/nicolas.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
                                 <div class="caption">
                                     <h3>Nicolas</h3>
-                                    <p>Titulaire d'un Master 2 STAPS ainsi que du BEESAN (Diplôme d'Etat de Maître-Nageur), Nicolas est maître-nageur durant les 2 mois d'été.</p>
+                                    <p>
+                                        Titulaire d'un Master 2 STAPS ainsi que du BEESAN (Diplôme d'Etat de Maître-Nageur), Nicolas est maître-nageur durant les 2 mois d'été.
+                                        Il encadre aussi le longe-côte et est animateur auprès des enfants du club.
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -605,7 +612,7 @@
                                 <img src="img/yoann.jpg" alt="" style="width: 130px;" class="img-thumbnail" />
                                 <div class="caption">
                                     <h3>Yoann</h3>
-                                    <p>Etudiant en Master 2 STAPS, spécialiste de la préparation physique, Yoann est animateur et encadre les séances de remise en forme au mois d'Août.</p>
+                                    <p>Etudiant en Master 2 STAPS, spécialiste de la préparation physique, Yoann est animateur au mois de Juillet.</p>
                                 </div>
                             </div>
                         </li>
@@ -646,17 +653,9 @@
 						<h3 class="txt-center no-underline"><span class="glyphicon glyphicon-envelope"></span> Adresse</h3>
 						<p class="big-size"><span class="fn">Club de Plage Albatros</span></p>
 						<p class="adr">
-							<span class="big-size"><span class="street-address">Grande Plage de Quiberon</span></span><br />
+							<span class="big-size"><span class="street-address">Grande Plage de Quiberon<br />Boulevard Chanard</span></span><br />
 							<span class="big-size"><span class="postal-code">56170</span> <span class="locality">Quiberon</span></span>
 						</p>
-						<div class="txt-center">
-							<!-- <img src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyARwOqZ7bqNp6Va9hiyrCxbbCVUyD1Bmxg
-&center=47.479111,-3.12050
-&zoom=16
-&sensor=false
-&visual_refresh=true
-&markers=color:blue|47.47954,-3.12005" /> -->
-						</div>
                         <div class="embed-responsive  embed-responsive-16by9">
                             <div id="map-canvas" class="embed-responsive-item"></div>
                         </div>
