add button to expand table | better navigation facebook logo | better partenaire

--- a/app/club-plage/club-plage.html
+++ b/app/club-plage/club-plage.html
@@ -177,6 +177,10 @@
                 </tbody>
             </table>
 
+            <p class="text-right">
+                <small><i class="fa fa-plus"></i> <a href="#">Afficher les tarifs préférentiels</a></small>
+            </p>
+
         </article>
         <article id="tarifClubPlage2" class="col-lg-4 col-md-4 col-sm-6 col-xs-6  col-lg-offset-2 col-md-offset-1">
             <div class="page-header">
@@ -216,7 +220,7 @@
                 <tr>
                     <th>1 enfant</th>
                     <td>20 €</td>
-                    <td class="short hideMe">&nbsp;</td>
+                    <td class="short">&nbsp;</td>
                     <td>96 €</td>
                     <td class="short hideMe">&nbsp;</td>
                     <td class="hideMe">180 €</td>
@@ -228,7 +232,7 @@
                 <tr>
                     <th>2 enfants</th>
                     <td>36 €</td>
-                    <td class="short hideMe">&nbsp;</td>
+                    <td class="short">&nbsp;</td>
                     <td>172 €</td>
                     <td class="short hideMe">&nbsp;</td>
                     <td class="hideMe">311 €</td>
@@ -288,9 +292,10 @@
                 </tbody>
             </table>
 
-            <!--<th</th>-->
-            <!--<td></td>-->
-            <!--<td colspan="4" class="txt-right"><span class="glyphicon glyphicon-plus"></span> <a href="#">Afficher les tarifs préférentiels</a></td>-->
+            <p class="text-right">
+                <small><i class="fa fa-plus"></i> <a href="#">Afficher les tarifs préférentiels</a></small>
+            </p>
+
         </article>
     </div>
     <footer class="text-center">
