--- a/app/ecole-natation/ecole-natation.html
+++ b/app/ecole-natation/ecole-natation.html
@@ -6,7 +6,7 @@
         <article class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
             <div class="columns">
                 <p>
-                    Dans une piscine chauffée et couverte, l'Albatros propose des leçons <span class="fauxBold">individusalisées</span> de natation. Les enfants sont deux maximum par cours. Une méthode qui priviligie la familiarisation avec l'eau et l'apprentissage des techniques de nage.<br />
+                    Dans une piscine chauffée et couverte, l'Albatros propose des leçons <strong>individusalisées</strong> de natation. Les enfants sont deux maximum par cours. Une méthode qui priviligie la familiarisation avec l'eau et l'apprentissage des techniques de nage.<br />
                     Les leçons de natations sont dispensés par un maître-nageur diplômé d'état offrant à vos enfants des progrès visibles et des résultats garantis.<br />
                     Une séance dure 20 minutes, la durée idéale pour une concentration de qualité et un engagement moteur optimal.<br />
                     L'Ecole de Natation s'appuie sur 3 niveaux d'enseignement: l'initiation, l'apprentissage et le perfectionnement.
