--- a/app/navigation/navigation.html
+++ b/app/navigation/navigation.html
@@ -22,7 +22,7 @@
                 <li><a href="#contact" class="slowMotion">Contact</a></li>
                 <li><a href="#partenariat" class="slowMotion">Partenariat</a></li>
                 <li class="divider-vertical"></li>
-                <li><a class="logo-facebook" href="https://www.facebook.com/AlbatrosClubDePlage" target="_blank"><span>Voir la page Facebook</span></a></li>
+                <li class="text-color-facebook"><a href="https://www.facebook.com/AlbatrosClubDePlage" target="_blank"><i class="fa fa-facebook-official"></i><span class="invisible"> </span>Facebook</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
