--- a/app/partenaire/partenaire.html
+++ b/app/partenaire/partenaire.html
@@ -5,62 +5,78 @@
     </header>
 
     <article>
-        <ul class="row thumbnails list-unstyled">
-            <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                <div class="thumbnail">
-                    <img src="img/logo/la-belle-iloise.png" alt="" />
-                    <div class="caption txt-center">
-                        <p>
-                            La Belle-Îloise<br />
-                            <a href="http://www.labelleiloise.fr/" title="La Belle-Îloise" class="btn btn-default" role="button" target="_blank">Voir le site</a>
-                        </p>
+        <ul class="row list-unstyled">
 
-                    </div>
-                </div>
-                <div class="thumbnail">
-                    <img src="img/logo/la-cour-d-orgeres.png" alt="" />
-                    <div class="caption txt-center">
-                        <p>
-                            La Cour D'Orgères<br />
-                            <a href="http://www.lacourdorgeres.com/" title="La Cour D'Orgères" class="btn btn-default" role="button" target="_blank">Voir le site</a>
-                        </p>
-                    </div>
-                </div>
-            </li>
             <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                <div class="thumbnail">
-                    <img src="img/logo/pasquier.png" alt="" />
-                    <div class="caption txt-center">
-                        <p>
-                            Brioches Pasquier<br />
-                            <a href="http://www.pasquier.fr/" title="Brioches Pasquier" class="btn btn-default" role="button" target="_blank">Voir le site</a>
-                        </p>
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-heading-blue-light">
+                        <h3>Famille Plus</h3>
                     </div>
-                </div>
-            </li>
-            <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                <div class="thumbnail">
-                    <img src="img/logo/maison-lucas.png" alt="" />
-                    <div class="caption txt-center">
-                        <p>
-                            Maison Lucas<br />
-                            <a href="http://www.maisonlucas.net/" title="Maison Lucas" class="btn btn-default" role="button" target="_blank">Voir le site</a>
-                        </p>
+                    <div class="panel-body">
+                        <img src="img/logo/famille-plus.png" alt="" />
+                    </div>
+                    <div class="panel-footer panel-footer-blue-light">
+                        <a href="http://www.familleplus.fr/" title="Famille Plus" class="btn btn-default" role="button" target="_blank">Voir le site</a>
                     </div>
                 </div>
             </li>
 
             <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-                <div class="thumbnail">
-                    <img src="img/logo/famille-plus.png" alt="" />
-                    <div class="caption txt-center">
-                        <p>
-                            Famille Plus<br />
-                            <a href="http://www.familleplus.fr/" title="Famille Plus" class="btn btn-default" role="button" target="_blank">Voir le site</a>
-                        </p>
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-heading-blue-light">
+                        <h3>Maison Lucas</h3>
+                    </div>
+                    <div class="panel-body">
+                        <img src="img/logo/maison-lucas.png" alt="">
+                    </div>
+                    <div class="panel-footer panel-footer-blue-light">
+                        <a href="http://www.maisonlucas.net/" title="Maison Lucas" class="btn btn-default" role="button" target="_blank">Voir le site</a>
                     </div>
                 </div>
             </li>
+
+            <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-heading-blue-light">
+                        <h3>La Cour D'Orgères</h3>
+                    </div>
+                    <div class="panel-body">
+                        <img src="img/logo/la-cour-d-orgeres.png" alt="">
+                    </div>
+                    <div class="panel-footer panel-footer-blue-light">
+                        <a href="http://www.lacourdorgeres.com/" title="La Cour D'Orgères" class="btn btn-default" role="button" target="_blank">Voir le site</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-heading-blue-light">
+                        <h3>Brioches Pasquier</h3>
+                    </div>
+                    <div class="panel-body">
+                        <img src="img/logo/pasquier.png" alt="">
+                    </div>
+                    <div class="panel-footer panel-footer-blue-light">
+                        <a href="http://www.pasquier.fr/" title="Brioches Pasquier" class="btn btn-default" role="button" target="_blank">Voir le site</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading panel-heading-blue-light">
+                        <h3>La Belle-Îloise</h3>
+                    </div>
+                    <div class="panel-body">
+                        <img src="img/logo/la-belle-iloise.png" alt="">
+                    </div>
+                    <div class="panel-footer panel-footer-blue-light">
+                        <a href="http://www.labelleiloise.fr/" title="La Belle-Îloise" class="btn btn-default" role="button" target="_blank">Voir le site</a>
+                    </div>
+                </div>
+            </li>
+
         </ul>
     </article>
 </section><!-- /#section partenariat  -->
