--- a/app/equipe/equipe.html
+++ b/app/equipe/equipe.html
@@ -70,6 +70,6 @@
 
     </article>
     <footer class="text-center">
-        <a href="#contact" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Contact</span></a>
+        <a href="#contact" target="_self" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Contact</span></a>
     </footer>
 </section>
