--- a/app/navigation/navigation.html
+++ b/app/navigation/navigation.html
@@ -14,14 +14,15 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-main">
             <ul class="nav navbar-nav">
-                <li><a href="#club-plage" class="slowMotion">Club de Plage</a></li>
-                <li><a href="#ecole-natation" class="slowMotion">Ecole de Natation</a></li>
-                <li><a href="#remise-forme" class="slowMotion">Remise en Forme</a></li>
-                <li><a href="#stand-up-paddle" class="slowMotion">Stand Up Paddle</a></li>
-                <li><a href="#equipe" class="slowMotion">l'Equipe</a></li>
-                <li><a href="#contact" class="slowMotion">Contact</a></li>
-                <li><a href="#partenariat" class="slowMotion">Partenariat</a></li>
-                <li class="divider-vertical"></li>
+                <li><a href="#club-plage" target="_self" class="slowMotion">Club de Plage</a></li>
+                <li><a href="#ecole-natation" target="_self" class="slowMotion">Ecole de Natation</a></li>
+                <li><a href="#remise-forme" target="_self" class="slowMotion">Remise en Forme</a></li>
+                <li><a href="#stand-up-paddle" target="_self" class="slowMotion">Stand Up Paddle</a></li>
+                <li><a href="#equipe" target="_self" class="slowMotion">l'Equipe</a></li>
+                <li><a href="#contact" target="_self" class="slowMotion">Contact</a></li>
+                <li><a href="#partenariat" target="_self" class="slowMotion">Partenariat</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <li class="text-color-facebook"><a href="https://www.facebook.com/AlbatrosClubDePlage" target="_blank"><i class="fa fa-facebook-official"></i><span class="invisible"> </span>Facebook</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
