--- a/app/remise-forme/remise-forme.html
+++ b/app/remise-forme/remise-forme.html
@@ -100,6 +100,6 @@
 
 
     <footer class="text-center">
-        <a href="#stand-up-paddle" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Stand Up Paddle</span></a>
+        <a href="#stand-up-paddle" target="_self" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Stand Up Paddle</span></a>
     </footer>
 </section>
