--- a/app/stand-up-paddle/stand-up-paddle.html
+++ b/app/stand-up-paddle/stand-up-paddle.html
@@ -93,6 +93,6 @@
 
 
     <footer class="text-center">
-        <a href="#equipe" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">l'Equipe</span></a>
+        <a href="#equipe" target="_self" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">l'Equipe</span></a>
     </footer>
 </section>
