--- a/app/club-plage/club-plage.html
+++ b/app/club-plage/club-plage.html
@@ -67,7 +67,11 @@
     <hr class="separator">
 
     <div class="row">
-        <article id="tarifClubPlage1" class="col-lg-4 col-md-6 col-sm-6 col-xs-6 col-lg-offset-1 col-md-offset-1">
+        <article
+                id="tarifClubPlage1"
+                ng-class="{'col-lg-4 col-md-6 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-0 col-sm-offset-0 col-xs-offset-0': (showTablePrice2 && showTablePrice1), 'col-lg-12 col-md-12 col-sm-12 col-xs-12': (!showTablePrice2 || !showTablePrice1)}"
+                ng-show="showTablePrice2"
+                >
             <div class="page-header">
                 <h3>Tarifs demi-journée</h3>
                 <p class="small text-muted">Mode de paiement: Chèque - Espèce</p>
@@ -75,16 +79,16 @@
             <table class="table table-striped table-hover table-prices">
                 <thead>
                 <tr>
-                    <th></th>
+                    <th>&nbsp;</th>
                     <th>demi-journée</th>
                     <th class="short">&nbsp;</th>
                     <th>1 sem.</th>
-                    <th class="short hideMe">&nbsp;</th>
-                    <th class="hideMe">2 sem.</th>
-                    <th class="short hideMe">&nbsp;</th>
-                    <th class="hideMe">3 sem.</th>
-                    <th class="short hideMe">&nbsp;</th>
-                    <th class="hideMe">4 sem.</th>
+                    <th ng-show="!showTablePrice1" class="short">&nbsp;</th>
+                    <th ng-show="!showTablePrice1">2 sem.</th>
+                    <th ng-show="!showTablePrice1" class="short">&nbsp;</th>
+                    <th ng-show="!showTablePrice1">3 sem.</th>
+                    <th ng-show="!showTablePrice1" class="short">&nbsp;</th>
+                    <th ng-show="!showTablePrice1">4 sem.</th>
                 </tr>
                 </thead>
                 <tfoot>
@@ -93,12 +97,12 @@
                     <td>&nbsp;</td>
                     <td class="short">&nbsp;</td>
                     <td>&nbsp;</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">&nbsp;</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">&nbsp;</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">&nbsp;</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">&nbsp;</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">&nbsp;</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">&nbsp;</td>
                 </tr>
                 </tfoot>
                 <tbody>
@@ -107,26 +111,26 @@
                     <td>15 €</td>
                     <td class="short">&nbsp;</td>
                     <td>72 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">135 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">194 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">252 €</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">135 €</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">194 €</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">252 €</td>
                 </tr>
                 <tr>
                     <th>2 enfants</th>
                     <td>27 €</td>
                     <td class="short">&nbsp;</td>
                     <td>129 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">243 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">349 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">453 €</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">243 €</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">349 €</td>
+                    <td ng-show="!showTablePrice1" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice1">453 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice1">
                     <th>3 enfants</th>
                     <td>40 €</td>
                     <td class="short">&nbsp;</td>
@@ -138,7 +142,7 @@
                     <td class="short">&nbsp;</td>
                     <td>672 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice1">
                     <th>4 enfants</th>
                     <td>50 €</td>
                     <td class="short">&nbsp;</td>
@@ -150,7 +154,7 @@
                     <td class="short">&nbsp;</td>
                     <td>840 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice1">
                     <th>5 enfants</th>
                     <td>55 €</td>
                     <td class="short">&nbsp;</td>
@@ -162,7 +166,7 @@
                     <td class="short">&nbsp;</td>
                     <td>924 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice1">
                     <th>6 enfants</th>
                     <td>60 €</td>
                     <td class="short">&nbsp;</td>
@@ -177,12 +181,17 @@
                 </tbody>
             </table>
 
-            <p class="text-right">
-                <small><i class="fa fa-plus"></i> <a href="#">Afficher les tarifs préférentiels</a></small>
-            </p>
-
+            <p class="text-right" ng-show="(showTablePrice2 && showTablePrice1)">
+                <small>
+                    <i class="fa fa-plus"></i><button class="btn btn-link" ng-click="showTablePrice1 = !showTablePrice1">Afficher les tarifs préférentiels</button>
+                </small>
+            <p>
         </article>
-        <article id="tarifClubPlage2" class="col-lg-4 col-md-4 col-sm-6 col-xs-6  col-lg-offset-2 col-md-offset-1">
+        <article
+                id="tarifClubPlage2"
+                ng-class="{'col-lg-4 col-md-6 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-0 col-sm-offset-0 col-xs-offset-0': (showTablePrice2 && showTablePrice1), 'col-lg-12 col-md-12 col-sm-12 col-xs-12': (!showTablePrice2 || !showTablePrice1)}"
+                ng-show="showTablePrice1"
+                >
             <div class="page-header">
                 <h3>Tarifs journée complète</h3>
                 <p class="small text-muted">Mode de paiement: Chèque - Espèce</p>
@@ -190,16 +199,16 @@
             <table class="table table-striped table-hover table-prices">
                 <thead>
                 <tr>
-                    <th></th>
+                    <th>&nbsp;</th>
                     <th>journée</th>
                     <th class="short">&nbsp;</th>
                     <th>1 sem.</th>
-                    <th class="short hideMe">&nbsp;</th>
-                    <th class="hideMe">2 sem.</th>
-                    <th class="short hideMe">&nbsp;</th>
-                    <th class="hideMe">3 sem.</th>
-                    <th class="short hideMe">&nbsp;</th>
-                    <th class="hideMe">4 sem.</th>
+                    <th ng-show="!showTablePrice2" class="short">&nbsp;</th>
+                    <th ng-show="!showTablePrice2">2 sem.</th>
+                    <th ng-show="!showTablePrice2" class="short">&nbsp;</th>
+                    <th ng-show="!showTablePrice2">3 sem.</th>
+                    <th ng-show="!showTablePrice2" class="short">&nbsp;</th>
+                    <th ng-show="!showTablePrice2">4 sem.</th>
                 </tr>
                 </thead>
                 <tfoot>
@@ -208,12 +217,12 @@
                     <td>&nbsp;</td>
                     <td class="short">&nbsp;</td>
                     <td>&nbsp;</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">&nbsp;</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">&nbsp;</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">&nbsp;</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">&nbsp;</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">&nbsp;</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">&nbsp;</td>
                 </tr>
                 </tfoot>
                 <tbody>
@@ -222,26 +231,26 @@
                     <td>20 €</td>
                     <td class="short">&nbsp;</td>
                     <td>96 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">180 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">259 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">336 €</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">180 €</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">259 €</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">336 €</td>
                 </tr>
                 <tr>
                     <th>2 enfants</th>
                     <td>36 €</td>
                     <td class="short">&nbsp;</td>
                     <td>172 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">311 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">466 €</td>
-                    <td class="short hideMe">&nbsp;</td>
-                    <td class="hideMe">604 €</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">311 €</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">466 €</td>
+                    <td ng-show="!showTablePrice2" class="short">&nbsp;</td>
+                    <td ng-show="!showTablePrice2">604 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice2">
                     <th>3 enfants</th>
                     <td>49 €</td>
                     <td class="short">&nbsp;</td>
@@ -253,7 +262,7 @@
                     <td class="short">&nbsp;</td>
                     <td>823 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice2">
                     <th>4 enfants</th>
                     <td>60 €</td>
                     <td class="short">&nbsp;</td>
@@ -265,7 +274,7 @@
                     <td class="short">&nbsp;</td>
                     <td>1008 €</td>
                 </tr>
-                <tr class="hideMe">
+                <tr ng-show="!showTablePrice2">
                     <th>5 enfants</th>
                     <td>70 €</td>
                     <td class="short">&nbsp;</td>
@@ -292,13 +301,22 @@
                 </tbody>
             </table>
 
-            <p class="text-right">
-                <small><i class="fa fa-plus"></i> <a href="#">Afficher les tarifs préférentiels</a></small>
+            <p class="text-right" ng-show="(showTablePrice2 && showTablePrice1)">
+                <small>
+                    <i class="fa fa-plus"></i><button class="btn btn-link" ng-click="showTablePrice2 = !showTablePrice2">Afficher les tarifs préférentiels</button>
+                </small>
             </p>
 
         </article>
+
     </div>
+    <p class="text-right" ng-show="(!showTablePrice1 || !showTablePrice2)">
+        <small>
+            <i class="fa fa-plus"></i><button class="btn btn-link" ng-click="showTablePrice2 = showTablePrice1 = true">Revenir aux deux tableaux</button>
+        </small>
+    </p>
+
     <footer class="text-center">
-        <a href="#ecole-natation" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Ecole de Natation</span></a>
+        <a href="#ecole-natation" target="_self" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Ecole de Natation</span></a>
     </footer>
 </section><!-- /content-club-plage -->
