--- a/app/ecole-natation/ecole-natation.html
+++ b/app/ecole-natation/ecole-natation.html
@@ -134,6 +134,6 @@
 
     </div>
     <footer class="text-center">
-        <a href="#remise-forme" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Remise en Forme</span></a>
+        <a href="#remise-forme" target="_self" class="slowMotion"><i class="fa fa-arrow-circle-down  "></i><span class="sr-only">Remise en Forme</span></a>
     </footer>
 </section>
